--- a/VehicleInspectionInsuranceWeb/index.html
+++ b/VehicleInspectionInsuranceWeb/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/car1.png" />
+    <link rel="icon" type="image/png" href="/src/assets/logo_car.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Inspection</title>
   </head>
